File Structure, Typography, Slides
Sliding content using arrows on the screen. Modified directory structure so it better suits the project. Added basic typography.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,15 @@
 // Third-party
+@import "vendor/bourbon/bourbon";
 @import "vendor/normalize";
 @import "vendor/skeleton";
-@import "vendor/bourbon/bourbon";
 
 // Modules and Variables
-@import "partials/base";
+@import "abstracts/all";
+
+// Base
+@import "base/base";
+@import "base/typography";
 
 // Partials
-@import "partials/hero";
+@import "partials/header";
+@import "partials/content";
