--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:300,400,600,700");
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,700");
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i");
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -644,9 +644,8 @@ there.
 /* Larger than tablet */
 /* Larger than desktop */
 /* Larger than Desktop HD */
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display", serif;
-  font-weight: 700; }
+header {
+  text-align: center; }
 
 * {
   -webkit-box-sizing: border-box;
@@ -654,23 +653,103 @@ h1, h2, h3, h4, h5, h6 {
   box-sizing: border-box; }
 
 html, body {
-  background: cream;
-  overflow: hidden; }
+  background: blanchedalmond; }
 
-.centered {
-  text-align: center;
-  vertical-align: middle;
-  margin: 0 auto; }
+body {
+  position: relative;
+  overflow-x: hidden; }
 
-.hero {
-  background-image: url("http://via.placeholder.com/1366x768");
+body {
+  font-size: 16px;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  font-weight: 300;
+  line-height: 1.6;
+  color: black;
+  -webkit-text-size-adjust: 100%; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
+  color: black; }
+
+h1, h2 {
+  line-height: 1.1; }
+
+h3, h4 {
+  line-height: 1.3; }
+
+h1 {
+  font-size: 400%;
+  letter-spacing: -2px; }
+
+h2 {
+  font-size: 250%;
+  letter-spacing: -1px; }
+
+h3 {
+  font-size: 200%; }
+
+h4 {
+  font-size: 180%; }
+
+h5 {
+  font-size: 130%; }
+
+h6 {
+  font-size: 100%; }
+
+header {
+  background-image: url("../img/winter-landscape-2571788_1920.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   height: 100vh; }
 
-.title h1 {
-  padding-top: 25vh;
-  letter-spacing: 3px; }
+header h1 {
+  margin-top: 25vh;
+  letter-spacing: 2px;
+  word-spacing: 0.2em; }
+
+header #arrow {
+  position: fixed;
+  right: 0;
+  top: 50%;
+  background: grey;
+  width: 5vw;
+  height: 5vh;
+  -webkit-clip-path: polygon(0 0, 0 100%, 46% 46%);
+  clip-path: polygon(0 0, 0 100%, 46% 46%);
+  transition: 0.5s;
+  cursor: pointer; }
+  header #arrow:hover, header #arrow:active {
+    background-color: black; }
+
+section#content {
+  overflow: auto; }
+
+section#content {
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  background: inherit;
+  z-index: 10;
+  top: 0%;
+  left: 100%; }
+
+#arrow2 {
+  background: grey;
+  z-index: 20;
+  position: fixed;
+  display: none;
+  left: 0%;
+  top: 50%;
+  width: 5vw;
+  height: 5vh;
+  -webkit-clip-path: polygon(100% 0, 100% 100%, 46% 46%);
+  clip-path: polygon(100% 0, 100% 100%, 46% 46%);
+  transition: 0.5s;
+  cursor: pointer; }
+  #arrow2:hover {
+    background-color: black; }
 
 /*# sourceMappingURL=main.css.map */
