Social Media Icons, Email, Started Album
Tried out some colors and different typography/layout ideas.

--- a/scss/abstracts/_vars.scss
+++ b/scss/abstracts/_vars.scss
@@ -1,9 +1,11 @@
 // Colors
 
-$text-color: black;
-$heading-color: black;
-$accent-color: black;
-$social-color: black;
+$text-color: #3C0919;
+$light-color: grey;
+$heading-color: #3C0919;
+//$accent-color: #22181C;
+$accent-color: #A61955;
+$social-color: #3C0919;
 $highlight-color: yellow;
 $button-color: red;
-$bg-color: blanchedalmond;
+$bg-color: #ECE2D9;
