--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,5 +1,5 @@
 // Barlow Semi Condensed
-@import url('https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:300,400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:300,400,600,600i,700');
 
 // Playfair display
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i');
