--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:300,400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:300,400,600,600i,700");
 @import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i");
 html {
   font-family: sans-serif;
@@ -644,7 +644,7 @@ there.
 /* Larger than tablet */
 /* Larger than desktop */
 /* Larger than Desktop HD */
-header {
+header, .nav {
   text-align: center; }
 
 * {
@@ -653,24 +653,30 @@ header {
   box-sizing: border-box; }
 
 html, body {
-  background: blanchedalmond; }
+  background: #ECE2D9; }
 
 body {
   position: relative;
   overflow-x: hidden; }
+
+[id^="arrow"] {
+  z-index: 100; }
+
+.social svg {
+  fill: #3C0919 !important; }
 
 body {
   font-size: 16px;
   font-family: "Barlow Semi Condensed", sans-serif;
   font-weight: 300;
   line-height: 1.6;
-  color: black;
+  color: #3C0919;
   -webkit-text-size-adjust: 100%; }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Playfair Display", serif;
   font-weight: 700;
-  color: black; }
+  color: #3C0919; }
 
 h1, h2 {
   line-height: 1.1; }
@@ -703,18 +709,20 @@ header {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  height: 100vh; }
+  height: 100vh;
+  z-index: 20;
+  opacity: 1; }
 
 header h1 {
-  margin-top: 25vh;
+  margin-top: 30vh;
   letter-spacing: 2px;
   word-spacing: 0.2em; }
 
 header #arrow {
   position: fixed;
   right: 0;
-  top: 50%;
-  background: grey;
+  top: 45%;
+  background: #A61955;
   width: 5vw;
   height: 5vh;
   -webkit-clip-path: polygon(0 0, 0 100%, 46% 46%);
@@ -722,7 +730,21 @@ header #arrow {
   transition: 0.5s;
   cursor: pointer; }
   header #arrow:hover, header #arrow:active {
-    background-color: black; }
+    background-color: #3C0919; }
+
+header .social * {
+  display: inline-block;
+  margin: 0 5px;
+  width: 40px;
+  height: 40px; }
+  header .social *:hover {
+    fill: #A61955; }
+
+.email {
+  margin-top: 10vh;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  font-weight: 600;
+  font-size: 18px; }
 
 section#content {
   overflow: auto; }
@@ -737,12 +759,12 @@ section#content {
   left: 100%; }
 
 #arrow2 {
-  background: grey;
+  background: #A61955;
   z-index: 20;
   position: fixed;
   display: none;
   left: 0%;
-  top: 50%;
+  top: 45%;
   width: 5vw;
   height: 5vh;
   -webkit-clip-path: polygon(100% 0, 100% 100%, 46% 46%);
@@ -750,6 +772,29 @@ section#content {
   transition: 0.5s;
   cursor: pointer; }
   #arrow2:hover {
-    background-color: black; }
+    background-color: #3C0919; }
+
+.nav {
+  margin-top: 5vh; }
+
+.nav h2 {
+  word-spacing: 0.2em;
+  letter-spacing: 0.2em;
+  font-weight: 400; }
+
+.nav span {
+  cursor: pointer; }
+  .nav span:hover {
+    color: #A61955; }
+  .nav span:first-child {
+    font-family: "Playfair Display", serif;
+    font-style: italic; }
+  .nav span:last-child {
+    font-family: "Barlow Semi Condensed", sans-serif; }
+  .nav span.active {
+    border-bottom: 1px solid #A61955; }
+
+.nav strong {
+  color: #A61955; }
 
 /*# sourceMappingURL=main.css.map */
