--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,10 +1,12 @@
 header {
   @extend %center-txt;
   @include hero("winter-landscape-2571788_1920.jpg");
+  z-index: 20;
+  opacity: 1;
 }
 
 header h1 {
-  margin-top: 25vh;
+  margin-top: 30vh;
   //text-transform: uppercase;
   letter-spacing: 2px;
   word-spacing: 0.2em;
@@ -13,8 +15,8 @@ header h1 {
 header #arrow {
   position: fixed;
   right: 0;
-  top: 50%;
-  background: grey;
+  top: 45%;
+  background: $accent-color;
   width: 5vw;
   height: 5vh;
   -webkit-clip-path: polygon(0 0, 0 100%, 46% 46%);
@@ -25,4 +27,27 @@ header #arrow {
     background-color: $social-color;
   }
   cursor: pointer;
+}
+
+
+// Social
+
+header .social * {
+  display: inline-block;
+  margin: 0 5px;
+  width: 40px;
+  height: 40px;
+
+  &:hover {
+    fill: $accent-color;
+  }
+}
+
+.email {
+  margin-top: 10vh;
+  font: {
+    family: $sans-serif;
+    weight: $semi-bold;
+    size: 18px;
+  }
 }
