--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -37,10 +37,10 @@ header .social * {
   margin: 0 5px;
   width: 40px;
   height: 40px;
+}
 
-  &:hover {
-    fill: $accent-color;
-  }
+.social a:hover svg {
+  fill: $accent-color;
 }
 
 .email {
