--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,3 +14,7 @@
 @import "partials/header";
 @import "partials/content";
 @import "partials/nav";
+
+
+// Responsive
+@import "responsive/responsive"
